grupo de imagenes

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
         <!-- gallery-section 
 			================================================== -->
-        <section class="gallery-section">
+        <!-- <section class="gallery-section">
             <ul class="gallery-list">
                 <li>
                     <a href="#"><img src="upload/others/g1.jpg" alt=""></a>
@@ -408,7 +408,7 @@
                     <a href="#"><img src="upload/others/g5.jpg" alt=""></a>
                 </li>
             </ul>
-        </section>
+        </section> -->
         <!-- End gallery section -->
 
 
